--- a/SendMobileToWear/mobile/src/main/AndroidManifest.xml
+++ b/SendMobileToWear/mobile/src/main/AndroidManifest.xml
@@ -4,13 +4,10 @@
 
 
     <application
-        android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:allowBackup="true">
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:label="app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
